tests/ui/const_program_placeholder.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
 --> tests/ui/const_program_placeholder.rs:3:27
  |
3 | const PROGRAM: g::Program<_> =
  |                           ^ not allowed in type signatures
  |
help: replace this with a fully-specified type
  |
3 - const PROGRAM: g::Program<_> =
3 + const PROGRAM: Program<hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<7>, u16>>> =
  |
